prevent modal backdrop overflowing when used within canvas editor

--- a/global-bootstrap.55.scss
+++ b/global-bootstrap.55.scss
@@ -268,6 +268,9 @@ $bootstrap_variants: (
 
     .modal-backdrop {
         background-color: $theme_modal_backdrop;
+        // max width and height to prevent backdrop overflowing outside of canvas editor within admin views
+        max-width: 100%;
+        max-height: 100%;
 
         &.show {
             opacity: $theme_modal_backdrop_opacity;
